--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Planora | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Second commit -->
 
 <body>
 
@@ -50,3 +51,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
